--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -88,7 +88,7 @@
         }
     }
     
-    input[type=submit] {    
+    .submit-btn {    
         position: absolute;
         padding: 1.27rem 3.84rem;
         margin: 0.85rem auto 0 -18.3rem;
