--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -34,6 +34,7 @@ $to-right: linear-gradient(to right, $primary, $secondary);
 // $to-right-double: linear-gradient(to right, $primary, $primary-plus, $secondary, $secondary-plus);
 
 $to-right-double: linear-gradient(270deg, $secondary-plus 0%, $secondary 20%,  $primary-plus 90%);
+$to-left-double: linear-gradient(270deg, $primary-plus 10%, $secondary 80%, $secondary-plus 100%);
 $to-right-test: linear-gradient(250deg, $secondary-plus 5%, $secondary 20%,  $primary 90%);
 
 $to-right-plus: linear-gradient(to right, $primary, $secondary-plus);
