--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -117,6 +117,7 @@ label {
 }
 
 .modal-btn {
+    
     width: 9.62rem;
     height: 2.61rem;
     
@@ -126,6 +127,16 @@ label {
     
     color: $light-plus;  
 }
+
+// .modal-btn::after {
+//     content: '';
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background: black;
+// }
 
 .modal-btn-disabled {
     background: $dark-minus-15;
