--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -1,16 +1,13 @@
 .modal {    
     position: fixed;
-    left: 50%;
-    transform: translateX(-50%);
-
-    visibility: hidden;
-    // visibility: visible;
-    z-index: 0;
-    // top: 3.84rem;
-    top: 50rem;
     display: flex;
     flex-direction: column;
-    // transition: .4s ease-in;
+    visibility: hidden; 
+
+    left: 50%;
+    top: 50rem;
+    transform: translateX(-50%);
+    z-index: 0;
 
     width: 90%;    
     height: 32.76rem;
@@ -55,15 +52,13 @@
         left: -0.16rem;
 
         background-image: $to-right;
-
         border-radius: 1.64rem;
         z-index: -1;        
     }
 }
 
 .top-row, .bottom-row {
-    width: 19.54rem;
-    
+    width: 19.54rem;    
     margin: 1.3rem auto;    
 }
 
@@ -128,15 +123,6 @@ label {
     color: $light-plus;  
 }
 
-// .modal-btn::after {
-//     content: '';
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     background: black;
-// }
 
 .modal-btn-disabled {
     background: $dark-minus-15;
@@ -146,10 +132,17 @@ label {
 
 .modal-btn-success, .modal-btn-danger {
     cursor: pointer;
+    transition: all .4s ease-in;
+
+    &:hover {        
+        color: $dark-minus-85;
+        box-shadow: 0 1px 2px 1px $dark-minus-50;
+    }
 }
 
 .modal-btn-success {
-    background: $success;    
+    background: $success;
+        
 }
 
 .modal-btn-danger {
@@ -168,4 +161,3 @@ label {
         transform: rotate(180deg); 
     }
 }
-
