--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,7 @@ $primary: #dc186e;
 $primary-minus: #ED5397;
 $primary-plus: #B50B56;
 
+//Secondary Colors
 $secondary: #2AA1FE;
 $secondary-minus: #5EB8FE;
 $secondary-plus: #047CD9;
@@ -29,22 +30,17 @@ $success: #00A878;
 $info: $secondary;
 $danger: #C21543;
 
-// Gradient Backgrounds
+// Neutral Colors
+$footer-gray: #999999;
+
+// Gradient Colors
 $to-right: linear-gradient(to right, $primary, $secondary);
-// $to-right-double: linear-gradient(to right, $primary, $primary-plus, $secondary, $secondary-plus);
-
-$to-right-double: linear-gradient(270deg, $secondary-plus 0%, $secondary 20%,  $primary-plus 90%);
-$to-left-double: linear-gradient(270deg, $primary-plus 10%, $secondary 80%, $secondary-plus 100%);
-$to-right-test: linear-gradient(250deg, $secondary-plus 5%, $secondary 20%,  $primary 90%);
-
-$to-right-plus: linear-gradient(to right, $primary, $secondary-plus);
-$to-right-minus: linear-gradient(to right, $primary-minus, $secondary-minus);
+$to-right-270deg: linear-gradient(270deg, $secondary-plus 0%, $secondary 20%,  $primary-plus 90%);
+$to-right-250deg: linear-gradient(250deg, $secondary-plus 5%, $secondary 20%,  $primary 90%);
 
 $to-left: linear-gradient(to left, $primary, $secondary);
-$to-left-minus: linear-gradient(to left, $primary-minus, $secondary-minus);
 $to-left-plus: linear-gradient(to left, $primary, $secondary-plus);
+$to-left-270deg: linear-gradient(270deg, $primary-plus 10%, $secondary 80%, $secondary-plus 100%);
 
 $header-bg: linear-gradient(to bottom right, $light-minus, $light-plus);
 $circle-bg: radial-gradient($light, $light-minus);
-
-
