--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -11,7 +11,7 @@ header {
 }
 
 h1 {    
-    margin-bottom: 5.8rem; 
+    margin-bottom: calc(max(4.5rem)); 
     font-size: 5.6rem;
     font-weight: 700;
     max-width: 34.62rem;
@@ -92,7 +92,7 @@ input[type=email] {
 
 .submit-btn {    
     padding: 0.84rem 2.6rem;
-    margin: 0 auto;
+    margin: auto;
     
     background-image: $to-left-270deg;
     background-size: 130%;
