Change reference to e-mail svg icon

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -41,7 +41,7 @@ input[type=email] {
     padding: 0.77rem 2.3rem 0.77rem 3.85rem;
     margin-bottom: 1.7rem;
 
-    background-image: url('/assets/icons/email-icon.svg');
+    background-image: url('assets/icons/email-icon.svg');
     background-position: 1.16rem 0.77rem;
     background-repeat: no-repeat;
     background-color: $light-plus;
