--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,5 +1,6 @@
 header {
-    background-image: $header-bg;
+    // background-image: $header-bg;
+    background: lightsteelblue;
     height: 63%;
 }
 
