Adjust h1 margin bottom back to 5.8rem

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -72,7 +72,7 @@ header {
 }
 
 h1 {
-  margin-bottom: calc(max(4.5rem));
+  margin-bottom: 5.8rem;
   font-size: 5.6rem;
   font-weight: 700;
   max-width: 34.62rem;
